--- a/XNLeasureTechnicalTask/XNLeasureTechnicalTask.csproj
+++ b/XNLeasureTechnicalTask/XNLeasureTechnicalTask.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
+    <PackageReference Include="Prism.Wpf" Version="8.0.0.1909" />
     <PackageReference Include="Unity" Version="5.11.9" />
   </ItemGroup>
 
